Add face image upload with CarrierWave

--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
     <%= form.label :face %>
-    <%= form.text_field :face, id: :person_face %>
+    <%= form.file_field :face, id: :person_face %>
   </div>
 
   <div class="actions">
