Add link to show random person

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,6 +3,8 @@
 <h1>NameFace</h1>
 <p><i>A web app for memorizing names</i></p>
 
+<%= link_to 'Random', random_people_path %>
+
 <br>
 
 <h2>List of People</h2>
