--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,7 +3,7 @@
 <h1>NameFace</h1>
 <p><i>A web app for memorizing names</i></p>
 
-<%= link_to 'Random', random_people_path %>
+<%= link_to 'Quiz', quiz_people_path %>
 
 <br>
 
