Display all face images the same size

--- a/app/views/people/quiz.html.erb
+++ b/app/views/people/quiz.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Face:</strong>
-  <%= image_tag @person.face_url %>
+  <%= image_tag @person.face.standard.url %>
 </p>
 
 <%= link_to 'Next', quiz_people_path %> |
