Add new home page

--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -3,11 +3,13 @@
 <h1>NameFace</h1>
 <p><i>A web app for memorizing names</i></p>
 
-<%= link_to 'Quiz', quiz_people_path %>
+<%= link_to 'Home', root_path %>
 
 <br>
 
 <h2>List of People</h2>
+
+<%= link_to 'New Person', new_person_path %>
 
 <table>
   <thead>
@@ -30,5 +32,3 @@
 </table>
 
 <br>
-
-<%= link_to 'New Person', new_person_path %>
