--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
+    <h1>NameFace</h1>
+    <p><i>A web app for memorizing names</i></p>
+
     <%= yield %>
   </body>
 </html>
