Add quiz controller

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Quiz', quiz_people_path %> |
+<%= link_to 'Quiz', quiz_path %> |
 <%= link_to 'People', people_path %>
 
