--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -5,5 +5,5 @@
   <%= image_tag @person.face.standard.url %>
 </p>
 
-<%= link_to 'Next', quiz_people_path %> |
+<%= link_to 'Next', quiz_path %> |
 <%= link_to 'Home', root_path %>
