--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
     <h1>NameFace</h1>
     <p><i>A web app for memorizing names</i></p>
 
+    <%= link_to 'Home', root_path %> |
+    <%= link_to 'Quiz', quiz_path %> |
+    <%= link_to 'People', people_path %>
+
     <%= yield %>
   </body>
 </html>
