--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,12 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Home', root_path %>
-
-<br>
-
-<h2>List of People</h2>
-
-<%= link_to 'New Person', new_person_path %>
+<h2>People</h2>
 
 <table>
   <thead>
@@ -29,3 +23,5 @@
 </table>
 
 <br>
+
+<%= link_to 'New Person', new_person_path %>
