Change correct/incorrect links to buttons

--- a/app/views/quiz/index.html.erb
+++ b/app/views/quiz/index.html.erb
@@ -11,5 +11,9 @@
   <span id="hiddenName" style="display: none"><%= @person.name %></span>
 </p>
 
-<%= link_to 'Correct', quiz_path %> |
-<%= link_to 'Incorrect', quiz_path %>
+<table>
+  <tr>
+    <td><%= button_to 'Correct', quiz_path %></td>
+    <td><%= button_to 'Incorrect', quiz_path %></td>
+  </tr>
+</table>
